--- a/Notebook-markdown/01.md
+++ b/Notebook-markdown/01.md
@@ -9,3 +9,5 @@
 使用PyCharm+python 3.11开发
 
 PyCharm使用 github 方法见：[PyCharm中使用Git/GitHub详细步骤（图文详解）](https://blog.csdn.net/Q0717168/article/details/108719275)
+
+拉取项目的方法：[pycharm使用git和github](https://zhuanlan.zhihu.com/p/456089210)
