--- a/Notebook-markdown/01.md
+++ b/Notebook-markdown/01.md
@@ -4,6 +4,17 @@
 
 检测、识别乌龟等活动物品
 
+学习资源：[opencv课程](https://www.bilibili.com/video/BV11e411V7wB/?spm_id_from=333.999.0.0&vd_source=7e126e61fa5782a6afe7e2068321507a)
+
+## OpenCV
+
+### 作用
+
+- 目标识别
+- 自动驾驶
+- 医学图像分析
+- 视频内容理解
+
 ## 工具配置
 
 使用PyCharm+python 3.11开发
@@ -11,3 +22,4 @@
 PyCharm使用 github 方法见：[PyCharm中使用Git/GitHub详细步骤（图文详解）](https://blog.csdn.net/Q0717168/article/details/108719275)
 
 拉取项目的方法：[pycharm使用git和github](https://zhuanlan.zhihu.com/p/456089210)
+
