安装环境，test001为测试代码

--- a/Notebook-markdown/01.md
+++ b/Notebook-markdown/01.md
@@ -8,6 +8,8 @@
 
 ## OpenCV
 
+OpenCV用于计算机视觉开发，如物体识别、文字识别，图像拼接、背景替换等。
+
 ### 作用
 
 - 目标识别
@@ -22,4 +24,10 @@
 PyCharm使用 github 方法见：[PyCharm中使用Git/GitHub详细步骤（图文详解）](https://blog.csdn.net/Q0717168/article/details/108719275)
 
 拉取项目的方法：[pycharm使用git和github](https://zhuanlan.zhihu.com/p/456089210)
+
+## 必要的 Python 模块
+
+- numpy
+- matplotlib
+- opencv-python
 
