P13结束，图片的打开和保存

--- a/Notebook-markdown/02.md
+++ b/Notebook-markdown/02.md
@@ -11,3 +11,38 @@
 - waitKey()，让窗口停留，还能接收键盘和鼠标事件，参数为显示时间，单位毫秒，0为一直显示
 
 ## 打开和显示图像
+
+`imread`函数用于读取图像，有两个参数
+- path：图像路径
+- flag：图像读取模式，默认为彩色的
+
+打开图像的一般套路：
+
+```python
+# 创建窗口
+cv2.namedWindow('img', cv2.WINDOW_NORMAL)
+# 读取图像文件
+img = cv2.imread('/home/vk/Pictures/desktop/99a.jpg')
+# 将图像显示到制定窗口
+cv2.imshow('img', img)
+# 让窗口停留
+key = cv2.waitKey(0)
+# 退出处理
+if key&0xFF == ord('q'):
+    cv2.destroyAllWindows()
+```
+
+## 加载图片存在的问题
+
+- 使用VSCode时，代码`cv2`部分有错误提示
+![img.png](img.png)
+- windows下的路径表示。写作  d:\\abc\\zyx.jpg   ，使用双 `\`符号作为路径分隔符
+- 程序退出逻辑的问题。程序 `key = cv2.waitKey(0)` 捕获的是该字符的ASCII码（waitKey函数的返回值是整形数据，占用十六位存储空间，所以严格来说，应该将该函数捕获的结果的后八位与对应字符的ASCII比较），而不是该字符，所以比对时应该将变量 `key` 同对应字符的ASCII码对比。也可以把 `key` 转换为字符： `chr(key)` 再作比较
+
+## opencv 保存图片
+
+使用 `imwrite(name,img)`函数，参数含义：
+-name，要保存的文件名
+-img，包保存的图像对象，Mat类型
+
+## P14
