P16结束，从摄像头获取视频并保存

--- a/Notebook-markdown/02.md
+++ b/Notebook-markdown/02.md
@@ -45,4 +45,14 @@ if key&0xFF == ord('q'):
 -name，要保存的文件名
 -img，包保存的图像对象，Mat类型
 
-## P14
+## 从摄像头采集数据
+
+- VideoCapture()，采集器，根据设备号选择摄像头，一般为0（第一个摄像头）。在Linux中使用CAP_V4L2，Win下使用CAP_DSHOW等，默认为自动检测（0）
+- read()，采集数据，返回两个值，第一个是否读到，第二个为视频帧
+- release()，释放资源
+- VideoWriter，把视频采集下来，第一个参数为输出文件，第二个为多媒体文件格式（fourcc），第三个帧率，第四个为分辨率（为摄像头实际分辨率，不能随便写）
+- write,写入数据，同时编码
+- release，把数据从缓存写入硬盘
+
+可以使用 `isOpened()`判短摄像头是否已经打开
+采集数据时要判断数据是否获取到了
