--- a/Notebook-markdown/02.md
+++ b/Notebook-markdown/02.md
@@ -56,3 +56,45 @@ if key&0xFF == ord('q'):
 
 可以使用 `isOpened()`判短摄像头是否已经打开
 采集数据时要判断数据是否获取到了
+
+## 鼠标控制
+
+设置鼠标回调函数
+setMouseCallback(winname,callback,userdata)，winname,对哪个窗口进行操作
+callback,回调函数
+userdata,向回调函数传递参数，默认为None
+
+callback(event,x,y,flags,userdata)，自定义回调函数，名称自定
+event,事件，鼠标移动，按左键等
+x,y,鼠标坐标
+flags,鼠标键和组合键
+userdata,通过回调函数传过来的数据
+
+## TrackBar 控件
+
+TrackBar控件，就是一个滑块
+
+createTrackbar函数，创建控件，参数：tarckbarname,winname，value（当前值），count（最大值，最小值为0），callback,userdata
+getTrackbarPos函数，获取滑块位置,参数：tarckbarname,winnam;返回值是滑块当前值
+
+## 色彩空间
+
+* 色彩空间变换
+* 像素访问
+* 矩阵的+ - * /
+* 图像的基本绘制
+
+### 色彩空间
+
+* RGB：人眼的色彩空间
+* BGR：OpenCV默认使用该空间
+* HSV：色相（什么颜色），饱和度（颜色纯度），明亮度（）
+* HSB：和HSV一样，只是翻译不同
+* HSL：色相，饱和度，亮度，用得很少
+* YUV：用于视频色彩空间，Y表示灰度图像，UV表示色彩，由黑白电视向彩色电视转变而来
+  * YUV4:2:0
+  * YUV4:2:2
+  * YUV4:4:4，和RGB相同
+
+![img_1.png](img_1.png)
+
