opencv中图像的加法运算

--- a/Notebook-markdown/02.md
+++ b/Notebook-markdown/02.md
@@ -35,7 +35,7 @@ if key&0xFF == ord('q'):
 ## 加载图片存在的问题
 
 - 使用VSCode时，代码`cv2`部分有错误提示
-![img.png](img.png)
+![pics/img.png](pics/img.png)
 - windows下的路径表示。写作  d:\\abc\\zyx.jpg   ，使用双 `\`符号作为路径分隔符
 - 程序退出逻辑的问题。程序 `key = cv2.waitKey(0)` 捕获的是该字符的ASCII码（waitKey函数的返回值是整形数据，占用十六位存储空间，所以严格来说，应该将该函数捕获的结果的后八位与对应字符的ASCII比较），而不是该字符，所以比对时应该将变量 `key` 同对应字符的ASCII码对比。也可以把 `key` 转换为字符： `chr(key)` 再作比较
 
@@ -96,5 +96,5 @@ getTrackbarPos函数，获取滑块位置,参数：tarckbarname,winnam;返回值
   * YUV4:2:2
   * YUV4:4:4，和RGB相同
 
-![img_1.png](img_1.png)
+![pics/img_1.png](pics/img_1.png)
 
