图像的翻转和旋转

--- a/Notebook-markdown/06图像变换.md
+++ b/Notebook-markdown/06图像变换.md
@@ -15,10 +15,16 @@ cv2.resize(src,dst,dsize,fx,fy,interpolation)
 
 ## 图像翻转
 
-
+cv2.flip(img,filpcode)
+- filpCode=0,上下翻转
+- filpCode>0,左右翻转
+- filpCode<0,上下+左右翻转
 
 ## 图像旋转
 
-
+cv2.rotate(img,rotateCode)
+- ROTATE_90_CLOCKWISE,顺时针旋转90度
+- ROTATE_180
+- ROTATE_90_COUNTERCLOCKWISE，逆时针90度
 
 ##
