--- a/Notebook-markdown/06图像变换.md
+++ b/Notebook-markdown/06图像变换.md
@@ -27,4 +27,33 @@ cv2.rotate(img,rotateCode)
 - ROTATE_180
 - ROTATE_90_COUNTERCLOCKWISE，逆时针90度
 
-##
+## 图像的仿射变换
+
+仿射变换是图像旋转、缩放、平移的总称
+
+函数：
+cv2.warpAffine(src,M ,dsize,flags,mode,value)
+- src，要处理的图像
+- M，变换矩阵
+- dsize,变换后的大小
+- flags，与resize函数中的插值算法一致
+- mode，边界外退法标志
+- value，填充边界的值
+
+flags，value等一般用默认值
+
+### 平移矩阵
+
+也就是图像的平移
+
+矩阵中的每个像素由(x,y)组成，也就是坐标值。想横向平移，修改x的值，想纵向平移，修改y的值
+其变换矩阵是2X2的矩阵
+平移向量为2X1的向量，所在平移矩阵为2X3矩阵
+
+### 获取变换矩阵
+
+函数：
+cv2.getRotationMatrix2D(center,angle,scale)
+- center，中心点
+- angle，角度，逆时针
+- scale，缩放比例
