图像的翻转和旋转

--- a/Notebook-markdown/06图像变换.md
+++ b/Notebook-markdown/06图像变换.md
@@ -55,5 +55,5 @@ flags，value等一般用默认值
 函数：
 cv2.getRotationMatrix2D(center,angle,scale)
 - center，中心点
-- angle，角度，逆时针
-- scale，缩放比例
+- angle，旋转角度，逆时针
+- scale，缩放比例，仅改变显示的大小，图像大小不变
