--- a/Notebook-markdown/06图像变换.md
+++ b/Notebook-markdown/06图像变换.md
@@ -57,3 +57,9 @@ cv2.getRotationMatrix2D(center,angle,scale)
 - center，中心点
 - angle，角度，逆时针
 - scale，缩放比例
+
+cv2.getAffineTransform(src[],dst[])
+- src[]，原坐标点
+- dst[]，目标坐标点
+可以通过三个点的原坐标和修改后的坐标确定变换矩阵
+
